# xarm-LM_Controller

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh
simulation_environments/: xarm6.usd
simulation_environments/configuration/: xarm6_base.usd  xarm6_physics.usd  xarm6_robot.usd
src/: xarm_connection_test.py  xarm_movement_test.py
src/install/lm_controller/share/lm_controller/: package.bash  package.ps1  package.sh  package.xml
src/install/lm_controller/share/lm_controller/config/: controllers.yaml
src/install/lm_controller/share/lm_controller/launch/: controller.launch.py  gazebo.launch.py
src/install/lm_controller/share/lm_controller/lite6_urdf/: LICENSE  README.md  lite6.urdf
src/install/lm_controller/share/lm_controller/lite6_urdf/visual/: base.stl  gripper_lite.stl  link1.stl  link2.stl  link3.stl  link4.stl  link5.stl  link6.stl  vacuum_gripper_lite.stl
src/log/: latest_build
src/ros2_ws/install/: local_setup.sh  setup.sh
src/ros2_ws/install/lm_controller/lib/lm_controller/: lm_controller_node  xarm_interface_node
src/ros2_ws/install/lm_controller/share/lm_controller/: package.dsv  package.sh  package.xml  package.zsh
src/ros2_ws/log/: latest_build
src/ros2_ws/src/lm_controller/: package.xml  setup.cfg  setup.py
src/ros2_ws/src/lm_controller/config/: controllers.yaml
src/ros2_ws/src/lm_controller/launch/: controller.launch.py  gazebo.launch.py
src/ros2_ws/src/lm_controller/lm_controller/: lm_controller_node.py  xarm_interface_node.py
(+15 files in other folders)
