<?xml version="1.0"?>
<package format="3">
  <name>lm_controller</name>
  <version>0.1.0</version>
  <description>LM null-space controller for uFactory xArm</description>
  <maintainer email="your@email.com">your_name</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>